# my_app

./: .gitignore  BLE_GATT_NOTES.md  CALLBACK_RUNTIME_NOTES.md  CMakeLists.txt  NOTES.md  POWER_MANAGEMENT_NOTES.md  PROJECT_NOTES.md  VSCode_Zephyr_Debug_cppdbg.md  VSCode_Zephyr_IntelliSense.md  WiFi_Credentials_Build.md  ZEPHYR_MACRO_NOTES.md  prj.conf
boards/: esp32s3_devkitc_procpu.overlay
button_test/: CMakeLists.txt  LCD_OUTPUT_NOTES.md  prj.conf
button_test/boards/: esp32s3_devkitc_procpu.overlay
button_test/src/: main.c
lvgl_practice/: AHT10_DRIVER_TUTORIAL.md  CMakeLists.txt  DEVICE_DT_MACRO_EXPANSION.md  Kconfig  README.md  ZEPHYR_DRIVER_LEARNING_PLAN.md  prj.conf  wifi_credentials.conf.example
lvgl_practice/boards/: esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay
lvgl_practice/src/: aht10_service.c  aht10_service.h  app_controller.c  app_controller.h  app_settings.c  app_settings.h  app_state.c  app_state.h  led_service.c  led_service.h  lvgl_ej.c  lvgl_ej.h  main.c  max98357a_service.c  max98357a_service.h  radio_service.c  radio_service.h  wifi_service.c  wifi_service.h
modules/ej3989_drivers/: README.md
modules/waveshare_35c_drivers/: Kconfig  README.md
my_app/: NOTES.md  PROJECT_NOTES.md  prj.conf
peripheral_lab/: CMakeLists.txt  LEARNING_STEPS.md  README.md  prj.conf
reference/: bt_before_class.cpp
spiram_diag/: CMakeLists.txt  prj.conf
src/: main.c  main.cpp
waveshare_35c/: CMakeLists.txt  LCD_OUTPUT_NOTES.md  WIRING_NOTES.md  prj.conf
zephyr_kernel_practice/: CMakeLists.txt  PRACTICE_STEPS.md  README.md  prj.conf
(+38 files in other folders)
